// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index.astro > should render all CTypes 1`] = `
<body>
  <header>
    <span></span>
    <h2><a href="/">CTypeHub</a></h2>
    <a href="/create" class="_primary"> Create Claim Type </a>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" placeholder="Search query" aria-label="Search query" class="_search _component" /><button type="submit" class="_search6 _primary">Search</button>
    </form>

    <ul>
      <li class="_container">
        <h2>
          <a href="/ctype/kilt:ctype:0x1"> Example CType </a>
        </h2>
        <p>
          <span>Number of Attestations</span>
          <span>0</span>
        </p>
      </li>
      <li class="_container">
        <h2>
          <a href="/ctype/kilt:ctype:0x2"> Example nested CType property </a>
        </h2>
        <p>
          <span>Number of Attestations</span>
          <span>0</span>
        </p>
      </li>
    </ul>
  </search>
</body>
`;

exports[`index.astro > should render search results 1`] = `
<body>
  <header>
    <span></span>
    <h2><a href="/">CTypeHub</a></h2>
    <a href="/create" class="_primary"> Create Claim Type </a>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" value="nested" placeholder="Search query" aria-label="Search query" autofocus class="_search _component" /><button type="submit" class="_search6 _primary">Search</button>
    </form>

    <ul>
      <li class="_container">
        <h2>
          <a href="/ctype/kilt:ctype:0x2"> Example nested CType property </a>
        </h2>
        <p>
          <span>Number of Attestations</span>
          <span>0</span>
        </p>
      </li>
    </ul>
  </search>
</body>
`;

exports[`index.astro > should render when no search results 1`] = `
<body>
  <header>
    <span></span>
    <h2><a href="/">CTypeHub</a></h2>
    <a href="/create" class="_primary"> Create Claim Type </a>
  </header>

  <search>
    <form action="/" method="get" class="_container">
      <input type="search" name="query" value="asdagalasdg" placeholder="Search query" aria-label="Search query" autofocus class="_search _component" /><button type="submit" class="_search6 _primary">Search</button>
    </form>

    <p>No results for “asdagalasdg”</p>
  </search>
</body>
`;
